2014-11-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+beta5.

2014-11-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 5.0+beta4 release.

	* CHANGES: Updated.

2014-11-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin): Adjust comm_send_status() call.

2014-11-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (launch_plugin): Don't duplicate the result of
	nvticache_get_src anymore because it now already returns a copy.

2014-11-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (check_scan_stop): Exit currently running plugins
	processes when scan stop is received.

2014-11-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* CMakeLists.txt: Check for and link against libopenvas_nasl,
	libopenvas_base and libopenvas_misc libraries instead of the whole
	libopenvas package.

2014-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Adjust call of exec_nasl_script
	by providing the oid.
	(nasl_thread_args): Extend struct by element "oid".
	(nasl_plugin_launch): Add parameter "oid" and use it for struct
	nasl_thread_args.
	(nasl_thread): Adjust call of exec_nasl_script providing the oid.

	* src/pluginload.h: Adjust proto for nasl_plugin_launch accordingly.

	* src/pluginlaunch.c (plugin_launch): Adjust call of nasl_plugin_launch
	by providing NULL as oid.

2014-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (send_plug_info): It is guaranteed that a NVTI
	has a OID, therefore simpify the code. Also remove some uneeded
	setting of variables as they are never used.

2014-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Remove any use of the "OID" arglist element of a plugin arglist
	structure.

	* src/attack.c (launch_plugin): The plugins' arglist name is