@@ -1,3 +1,9 @@
+2014-11-21  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* src/attack.c (launch_plugin): Remove cur_plug and num_plugs arguments.
+	Don't send scan status.
+	(attack_host): Send scan status after launching plugin.
+
 2014-11-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Post release version bump.
